# RaspberryPi_ImageEncryption_ObjectDetection

./: README.md
main/: Tkinker_Gui.py  Tkinker_Gui2.py  Tkinker_Gui3.py  encrypt_decrypt.py  key.key  main.py
main/Project_Deps/: pyproject.toml
